--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.91.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "jsdom": "^26.1.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "^5.9.3",
     "vite": "^7.1.2",
     "vitest": "^3.2.4"
